[tool.poetry]
name = "checkdrfornewpatients"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
urllib3 = "^1.26.4"
requests = "^2.25.1"
bs4 = "^0.0.1"
replit = "^3.0.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
